--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 8002
 
 spring:
   application:
@@ -18,15 +18,11 @@ eureka:
     #是否从EurekaServer抓取已有的注册信息，默认为true，单节点无所谓，集群必须设置为true，才能配合ribbon使用负载均衡
     fetch-registry: true
     service-url:
-     defaultZone: http://localhost:7001/eureka
-     #defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+     #defaultZone: http://localhost:7001/eureka
+     defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
   instance:
-    instance-id: payment8001  #服务名称修改
-    prefer-ip-address: true   #显示ip
-    #Eureka客户端向服务端发送心跳的时间间隔,单位为秒(默认是30秒)
-    lease-renewal-interval-in-seconds: 1
-    #Eureka服务端在收到最后一次心跳后等待时间上限 ,单位为秒(默认是90秒),超时剔除服务
-    lease-expiration-duration-in-seconds: 2
+    instance-id: payment8002
+    prefer-ip-address: true
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
