--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -12,11 +12,11 @@ eureka:
     service-url:
     #设置与Eureka Server交互的地址，查询服务和注册服务都需要依赖这个地址
     #集群版
-      #defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+      defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
     #单机版
-      defaultZone: http://eureka7001.com:7001/eureka/
-  server:
+      #defaultZone: http://eureka7001.com:7001/eureka/
+#  server:
     #关闭自我保护机制，保证不可用服务被及时剔除
-    enable-self-preservation: false
+#    enable-self-preservation: false
     #服务端向客户端发送心跳的时间间隔，毫秒
-    eviction-interval-timer-in-ms: 2000
+#    eviction-interval-timer-in-ms: 2000
