--- a/cloud-api-commons/pom.xml
+++ b/cloud-api-commons/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>cloud-api-commons</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
