--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
           <type>pom</type>
           <scope>import</scope>
         </dependency>
-        <!--spring cloud Hoxton.SR1-->
+        <!--spring springcloud Hoxton.SR1-->
         <dependency>
           <groupId>org.springframework.cloud</groupId>
           <artifactId>spring-cloud-dependencies</artifactId>
@@ -55,7 +55,7 @@
           <type>pom</type>
           <scope>import</scope>
         </dependency>
-        <!--spring cloud 阿里巴巴-->
+        <!--spring springcloud 阿里巴巴-->
         <dependency>
           <groupId>com.alibaba.cloud</groupId>
           <artifactId>spring-cloud-alibaba-dependencies</artifactId>
