--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
     <module>cloud-consumerconsul-order80</module>
       <module>cloud-consumer-feign-order80</module>
       <module>cloud-provider-hystrix-payment8001</module>
+    <module>cloud-consumer-feign-hystrix-order800000</module>
+
   </modules>
   <packaging>pom</packaging>
 
