--- a/cloud-consumer-feign-hystrix-order800000/pom.xml
+++ b/cloud-consumer-feign-hystrix-order800000/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>cloud-consumer-feign-hystrix-order800000</artifactId>
 
     <dependencies>
+        <!--hystrix-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
         <!--openfeign-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
